kubernetes/grpc-client/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-client
  namespace: backend
spec:
  hosts:
    - "api.backend.com"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            prefix: /grpc-client/
      rewrite:
        uri: /
      route:
        - destination:
            host: grpc-client
            port:
              number: 3001
