kubernetes/grpc-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: backend
spec:
  selector:
    app: grpc-client
  ports:
    - name: api
      port: 3001
      targetPort: 3001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc-client
  namespace: backend
spec:
  hosts:
    - "api.backend.com"
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /grpc-client/
      rewrite:
        uri: /
      route:
        - destination:
            host: grpc-client
            port:
              number: 3001
